--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -26,6 +26,16 @@ model:
       - 2500
     acc_area: ${areas}
     aux_data: ${aux_data}
+  train_metrics:
+    _target_: metrics.distance_based.HaversineMetrics
+    acc_radiuses:
+      - 1
+      - 25
+      - 200
+      - 750
+      - 2500
+    acc_area: ${areas}
+    aux_data: ${aux_data}
 
 datamodule:
   _target_: data.datamodule.ImageDataModule
@@ -54,7 +64,7 @@ logger:
   project: plonk
   log_model: False
   offline: False
-  entity: imaginelab
+  entity: sihle-university-of-kwazulu-natal
 
 checkpoints:
   _target_: pytorch_lightning.callbacks.ModelCheckpoint
